--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -1,137 +1,147 @@
-.sideBarMenuContainer {
+.inlineitems{
+    display: inline-block;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+html, body{
+  height: 100%;
+}
+
+
+/*!
+ * Start Bootstrap - Simple Sidebar HTML Template (https://startbootstrap.com)
+ * Code licensed under the Apache License v2.0.
+ * For details, see http://www.apache.org/licenses/LICENSE-2.0.
+ */
+
+/* Toggle Styles */
+
+#wrapper {
+    padding-left: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
+
+#wrapper.toggled {
+    padding-left: 200px;
+}
+
+#sidebar-wrapper {
+    z-index: 1000;
     position: fixed;
+    left: 250px;
+    width: 0;
     height: 100%;
-}
+    margin-left: -260px;
+    overflow-y: auto;
+    background: lightslategray;
+    border-right:1px solid #ecf0f1;
+    margin-top:0;
+    top:50px;
+    bottom: 50px;
+    padding-top:0;
+        -webkit-transition: all 0.5s ease;
+        -moz-transition: all 0.5s ease;
+        -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 
-.userMenu {
-    width: 100%;
-    text-align: center;
-    margin-right: 0px;
-    margin-left: 0px;
-    margin-top: 0px;
-}
-
-nav.sidebar :global(.navbar-brand) :global(.glyphicon) {
-    margin-right: 0px;
-}
-
-
-/*Remove rounded coners*/
-/*nav.sidebar.:global(navbar) {*/
-    /*border-radius: 0px;*/
-/*}*/
-
-nav.sidebar {
-    -webkit-transition: margin 200ms ease-out;
-    -moz-transition: margin 200ms ease-out;
-    -o-transition: margin 200ms ease-out;
-    transition: margin 200ms ease-out;
-}
-
-/* .....NavBar: Icon only with coloring/layout.....*/
-
-/*small/medium side display*/
-@media ( min-width : 768px) {
-
-
-    /*Center Brand*/
-    /*nav.sidebar.:global(navbar).sidebar>.container :global(.navbar-brand), :global(.navbar)>:global(.container-fluid) :global(.navbar-brand)*/
-    /*{*/
-        /*margin-left: 0px;*/
+    /*&:hover{*/
+    /*color:black;*/
     /*}*/
-    /*Center Brand*/
-    nav.sidebar :global(.navbar-brand), nav.sidebar :global(.navbar-header) {
-        text-align: center;
-        width: 100%;
-        margin-left: 0px;
-    }
-
-    /*Center Icons*/
-    nav.sidebar a {
-        padding-right: 13px;
-    }
-
-    /*adds border top to first nav box */
-    nav.sidebar :global(.navbar-nav)>li:first-child {
-        border-top: 1px #e5e5e5 solid;
-    }
-
-    /*adds border to bottom nav boxes*/
-    nav.sidebar :global(.navbar-nav)>li {
-        border-bottom: 1px #e5e5e5 solid;
-    }
-
-    /* Colors/style dropdown box*/
-    nav.sidebar :global(.navbar-nav) :global(.open) :global(.dropdown-menu) {
-        position: static;
-        float: none;
-        width: auto;
-        margin-top: 0;
-        background-color: transparent;
-        border: 0;
-        -webkit-box-shadow: none;
-        box-shadow: none;
-    }
-
-    /*allows nav box to use 100% width*/
-    nav.sidebar :global(.navbar-collapse), nav.sidebar :global(.container-fluid) {
-        padding: 0 0px 0 0px;
-    }
-
-    /*colors dropdown box text */
-    :global(.navbar-inverse) :global(.navbar-nav) :global(.open) :global(.dropdown-menu)>li>a {
-        color: #777;
-    }
-
-    /*gives sidebar width/height*/
-    nav.sidebar {
-        width: 200px;
-        height: 100%;
-        margin-left: -160px;
-        float: left;
-        z-index: 8000;
-        margin-bottom: 0px;
-    }
-
-    /*give sidebar 100% width;*/
-    nav.sidebar li {
-        width: 100%;
-    }
-
-    /* Move nav to full on mouse over*/
-    nav.sidebar:hover {
-        margin-left: 0px;
-    }
-    /*for hiden things when navbar hidden*/
-    :global(.forAnimate) {
-        opacity: 0;
-    }
 }
 
-/* .....NavBar: Fully showing nav bar..... */
-@media ( min-width : 1330px) {
+#wrapper.toggled #sidebar-wrapper {
+    width: 250px;
+}
 
-    /*Show all nav*/
-    nav.sidebar {
-        margin-left: 0px;
-        float: left;
+#page-content-wrapper {
+    width: 100%;
+    position: absolute;
+    padding: 15px;
+}
+
+#wrapper.toggled #page-content-wrapper {
+    position: absolute;
+    margin-right: -250px;
+}
+
+/* Sidebar Styles */
+
+.sidebar-nav {
+    position: absolute;
+    top: 0;
+    width: 250px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.sidebar-nav li {
+    text-indent: 20px;
+    line-height: 40px;
+}
+
+.sidebar-nav li a {
+    display: block;
+    text-decoration: none;
+    color: #999999;
+}
+
+.sidebar-nav li a:hover,.sidebar-nav > .sidebar-brand a:hover {
+    text-decoration: none;
+    color:black;
+    background: rgba(255,255,255,0.2);
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+    text-decoration: none;
+}
+
+/*Sidebar item styling*/
+.sidebar-nav > .sidebar-brand {
+    height: 35px;
+    font-size: 16px;
+    /*line-height: 50px;*/
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.sidebar-nav > .sidebar-brand a {
+    color: #999999;
+}
+
+
+@media(min-width:768px) {
+    #wrapper {
+        padding-left: 250px;
     }
-    /*Show hidden items on nav*/
-    nav.sidebar :global(.forAnimate) {
-        opacity: 1;
+
+    #wrapper.toggled {
+        padding-left: 0;
+    }
+
+    #sidebar-wrapper {
+        width: 250px;
+    }
+
+    #wrapper.toggled #sidebar-wrapper {
+        width: 0;
+    }
+
+    #page-content-wrapper {
+        padding: 20px;
+        position: relative;
+    }
+
+    #wrapper.toggled #page-content-wrapper {
+        position: relative;
+        margin-right: 0;
     }
 }
-
-nav.sidebar :global(.navbar-nav) :global(.open) :global(.dropdown-menu)>li>a:hover, nav.sidebar :global(.navbar-nav) :global(.open) :global(.dropdown-menu)>li>a:focus
-{
-    color: #CCC;
-    background-color: transparent;
-}
-
-nav:hover :global(.forAnimate) {
-    opacity: 1;
-}
-
-section {
-    padding-left: 15px;
+body{
+  overflow:hidden;
 }
