react-router implementation
TopMenu now works properly as a view switcher :)
https://reacttraining.com/react-router/web/example/basic
https://stackoverflow.com/questions/34607841/react-router-nav-bar-example

--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -36,9 +36,9 @@ html, body{
     width: 0;
     height: 100%;
     margin-left: -260px;
-    overflow-y: auto;
+    /*overflow-y: auto;*/
     background: lightslategray;
-    border-right:1px solid #ecf0f1;
+    border-right:5px solid #1db954;
     margin-top:0;
     top:50px;
     bottom: 50px;
