--- a/src/SideBar.css
+++ b/src/SideBar.css
@@ -37,7 +37,7 @@ html, body{
     height: 100%;
     margin-left: -260px;
     /*overflow-y: auto;*/
-    background: lightslategray;
+    background: lightsteelblue;
     border-right:5px solid #1db954;
     margin-top:0;
     top:50px;
