--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
     padding: 50px;
-    background-color: #f6ffa8;
+    background-color: white;
     font-family: sans-serif;
 }
 #container {
