--- a/src/styles.css
+++ b/src/styles.css
@@ -149,14 +149,23 @@ body{
 #playlisttable {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 80%;
+    width: 1050px;
+    table-layout: fixed;
+    word-wrap:break-word;
+    /*margin-left: 50px;*/
+
 }
 
 #playlisttable td, #playlisttable th {
     border: 1px solid #ddd;
     padding: 8px;
     white-space: nowrap;
+    width: 350px;
     /*overflow: hidden;*/
+}
+
+#playlisttable td:hover {
+    color: #7b926d;
 }
 
 #playlisttable tr:nth-child(even){background-color: #f2f2f2;}
@@ -164,6 +173,7 @@ body{
 #playlisttable th {
     padding-top: 12px;
     padding-bottom: 12px;
+    width: 350px;
     text-align: center;
     background-color: #4CAF50;
     color: white;
@@ -175,7 +185,7 @@ body{
 
 #playlisttable tbody {
     overflow: auto;
-    height: 80vh;
+    height: 60vh;
     display: block;
 }
 
@@ -186,4 +196,7 @@ body{
    color: #FFF
 }
 
+#userplaylists {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+}
 
