--- a/src/styles.css
+++ b/src/styles.css
@@ -16,132 +16,34 @@ html, body{
  */
 
 /* Toggle Styles */
-
-#wrapper {
-    padding-left: 0;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-#wrapper.toggled {
-    padding-left: 200px;
-}
-
-#sidebar-wrapper {
-    z-index: 1000;
+.sidebar {
     position: fixed;
-    left: 250px;
-    width: 0;
-    height: 100%;
-    margin-left: -260px;
-    /*overflow-y: auto;*/
-    background: black;
-    border-right:5px solid #1db954;
-    margin-top:0;
-    top:50px;
-    bottom: 50px;
-    padding-top:0;
-        -webkit-transition: all 0.5s ease;
-        -moz-transition: all 0.5s ease;
-        -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-
-    /*&:hover{*/
-    /*color:black;*/
-    /*}*/
-}
-
-#wrapper.toggled #sidebar-wrapper {
-    width: 250px;
-}
-
-#page-content-wrapper {
-    width: 100%;
-    position: absolute;
-    padding: 15px;
-}
-
-#wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -250px;
-}
-
-/* Sidebar Styles */
-
-.sidebar-nav {
-    position: absolute;
-    top: 0;
-    width: 250px;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.sidebar-nav li {
-    text-indent: 20px;
-    line-height: 40px;
-}
-
-.sidebar-nav li a {
+    top: 51px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
     display: block;
-    text-decoration: none;
-    color: #999999;
+    padding-left: 20px;
+    overflow-x: hidden;
+    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    background-color: #111111;
+    border-right: 1px solid #eee;
+    width: 220px; /* Fixed width of sidebar */
 }
 
-.sidebar-nav li a:hover,.sidebar-nav > .sidebar-brand a:hover {
-    text-decoration: none;
-    color:black;
-    background: rgba(255,255,255,0.2);
+::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-track {
+    background: rgba(255, 119, 0, 0.25);
 }
 
-.sidebar-nav li a:active,
-.sidebar-nav li a:focus {
-    text-decoration: none;
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #4CAF50;
+    border-radius: 10px;
 }
 
-/*Sidebar item styling*/
-.sidebar-nav > .sidebar-brand {
-    height: 35px;
-    font-size: 16px;
-    /*line-height: 50px;*/
-    padding-top: 5px;
-    padding-bottom: 5px;
-}
-
-.sidebar-nav > .sidebar-brand a {
-    color: #999999;
-}
-
-
-@media(min-width:768px) {
-    #wrapper {
-        padding-left: 250px;
-    }
-
-    #wrapper.toggled {
-        padding-left: 0;
-    }
-
-    #sidebar-wrapper {
-        width: 250px;
-    }
-
-    #wrapper.toggled #sidebar-wrapper {
-        width: 0;
-    }
-
-    #page-content-wrapper {
-        padding: 20px;
-        position: relative;
-    }
-
-    #wrapper.toggled #page-content-wrapper {
-        position: relative;
-        margin-right: 0;
-    }
-}
 body{
   overflow:hidden;
 }
@@ -198,5 +100,24 @@ body{
 
 #userplaylists {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+}
+
+#player {
+    color: #FFFFFF;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    width: 70vw;
+    text-align: center;
+}
+
+#songinfo {
+    position: absolute;
+    left: 15px;
+    text-align: left;
+    padding: 15px;
+}
+
+#playerbutton {
+    display: inline-block;
+    position: absolute;
 }
 
