--- a/src/styles.css
+++ b/src/styles.css
@@ -45,7 +45,7 @@ html, body{
 }
 
 body{
-  overflow:hidden;
+    overflow:hidden;
 }
 
 #playlisttable {
@@ -54,6 +54,9 @@ body{
     width: 1050px;
     table-layout: fixed;
     word-wrap:break-word;
+    position: absolute;
+    left: 250px;
+
     /*margin-left: 50px;*/
 
 }
