Added track progress + lengths
8/1/18
Changes:
- Live track position now works via componentDidMount, setInterval(), and API call
- url fixed (no more /playlists)
- added track lengths

Notes:
- semantic-ui-react has even more than bootstrap
- update component every second react - https://stackoverflow.com/questions/39426083/update-component-every-second-react

--- a/src/styles.css
+++ b/src/styles.css
@@ -92,6 +92,7 @@ body{
     overflow: auto;
     height: 60vh;
     display: block;
+    position: absolute;
 }
 
 .link {
@@ -122,5 +123,17 @@ body{
 #playerbutton {
     display: inline-block;
     position: absolute;
+}
+
+#playerbutton :hover {
+    color: white
+}
+
+#songprogress {
+    width: 525px;
+    position: absolute;
+    left: 285px;
+    bottom: 4px;
+
 }
 
