--- a/src/styles.css
+++ b/src/styles.css
@@ -130,10 +130,12 @@ body{
 }
 
 #songprogress {
-    width: 18vw;
+    width: 28vw;
+    height: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
     position: absolute;
-    left: 25%;
-    bottom: 4px;
-
+    top: 0; left: 0; bottom: 0; right: 0;
 }
 
