--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+
 .inlineitems{
     display: inline-block;
     padding-top: 10px;
@@ -49,23 +56,21 @@ body{
 }
 
 #playlisttable {
+    margin-top: 30px;
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 1050px;
+    width: 82vw;
     table-layout: fixed;
     word-wrap:break-word;
     position: absolute;
     left: 250px;
-
-    /*margin-left: 50px;*/
-
 }
 
 #playlisttable td, #playlisttable th {
     border: 1px solid #ddd;
     padding: 8px;
     white-space: nowrap;
-    width: 350px;
+    width: 25vw;
     /*overflow: hidden;*/
 }
 
@@ -78,7 +83,7 @@ body{
 #playlisttable th {
     padding-top: 12px;
     padding-bottom: 12px;
-    width: 350px;
+    width: 25vw;
     text-align: center;
     background-color: #4CAF50;
     color: white;
@@ -90,7 +95,7 @@ body{
 
 #playlisttable tbody {
     overflow: auto;
-    height: 60vh;
+    height: 75vh;
     display: block;
     position: absolute;
 }
@@ -138,4 +143,85 @@ body{
     position: absolute;
     top: 0; left: 0; bottom: 0; right: 0;
 }
+
+/*Now playing styling*/
+.now-playing__name {
+  font-size: 1.5em;
+  margin-bottom: 0.2em;
+}
+
+.now-playing__artist {
+  margin-bottom: 1em;
+}
+
+.now-playing__status {
+  margin-bottom: 1em;
+}
+
+.now-playing__img {
+  float: left;
+  margin-right: 10px;
+  text-align: right;
+  width: 45%;
+}
+
+.now-playing__img img {
+  max-width: 80vmin;
+  width: 100%;
+}
+
+.now-playing__side {
+  margin-left: 5%;
+  width: 45%;
+}
+
+/** Progress **/
+.progress {
+  border: 0.15em solid rgba(255, 255, 255, 0.7);
+  border-radius: 10em;
+  padding: 0.2em;
+}
+
+.progress__bar {
+  border-radius: 10em;
+  background-color: rgba(255, 255, 255, 0.7);
+  height: 0.45em;
+}
+
+/** Background **/
+.background {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-size: cover;
+  background-position: center center;
+  filter: opacity(0.15);
+  position: absolute;
+}
+
+.main-wrapper {
+    align-items: center;
+    display: flex;
+    height: 50%;
+    margin: 0 auto;
+    justify-content: center;
+    position: absolute;
+    top: 20%; left: 250px; bottom: 0; right: 0;
+    width: 50%;
+    z-index: 1;
+    background-color: #2e2e2e;
+}
+
+@media all and (max-width: 980px) {
+    #element{
+        margin-left: 0;
+        left: 250px;
+    }
+}
+
+.main-container {
+  flex: 1;
+}
+
 
