--- a/src/styles.css
+++ b/src/styles.css
@@ -128,6 +128,9 @@ body{
 #playerbutton {
     display: inline-block;
     position: absolute;
+    /*top: 0; left: 0; bottom: 0; right: 0;*/
+    margin-top: 15px;
+    left: 48.5vw;
 }
 
 #playerbutton :hover {
