--- a/src/styles.css
+++ b/src/styles.css
@@ -185,12 +185,6 @@ body{
   padding: 0.2em;
 }
 
-.progress__bar {
-  border-radius: 10em;
-  background-color: rgba(255, 255, 255, 0.7);
-  height: 0.45em;
-}
-
 /** Background **/
 .background {
   left: 0;
@@ -214,6 +208,7 @@ body{
     width: 50%;
     z-index: 1;
     background-color: #2e2e2e;
+    background-color: rgba(0, 0, 0,.25);
 }
 
 @media all and (max-width: 980px) {
