--- a/src/components/styles/background.css
+++ b/src/components/styles/background.css
@@ -2,11 +2,11 @@
     width: 100vw;
     height: 100vh;
     color: #fff;
-    background: linear-gradient(0deg, #ff0000, #004aff, #ffed00, #ff00d5, #00e7ff, #19ff00, #0e8e00, #ba6fee, #ff8900);
+    background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB, #F7EA00);
     background-size: 400% 400%;
-    -webkit-animation: Gradient 35s ease infinite;
-    -moz-animation: Gradient 35s ease infinite;
-    animation: Gradient 35s ease infinite;
+    -webkit-animation: Gradient 15s ease infinite;
+    -moz-animation: Gradient 15s ease infinite;
+    animation: Gradient 15s ease infinite;
 }
 
 @-webkit-keyframes Gradient {
