Added local file playback
Goals:
- Improve local files ui layout, combine with spotify web player
- Persist uploaded local files after switching components

--- a/src/components/styles/local.css
+++ b/src/components/styles/local.css
@@ -9,3 +9,9 @@
     margin-bottom: 30px;
     display: table;
 }
+
+.localplayer {
+    width: 40vw;
+    display: table-cell;
+    margin: 0 auto;
+}
