--- a/src/styles.css
+++ b/src/styles.css
@@ -137,7 +137,7 @@ body {
 }
 
 #playerbutton {
-    display: inline-block;
+    display: table-cell;
     position: absolute;
     /*top: 0; left: 0; bottom: 0; right: 0;*/
     margin-top: 15px;
