--- a/src/components/styles/local.css
+++ b/src/components/styles/local.css
@@ -1,17 +1,71 @@
 .local {
     position: relative;
-    width: 60vw;
-    height: 200px;
     border-width: 2px;
     border-color: rgb(102, 102, 102);
     border-style: dashed;
     border-radius: 5px;
-    margin-bottom: 30px;
     display: table;
+    height: 50vh;
 }
 
 .localplayer {
     width: 40vw;
     display: table-cell;
     margin: 0 auto;
+}
+
+#localgrid {
+    height: 60vh;
+    margin-top: 20px;
+}
+
+
+#filetable {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    table-layout: fixed;
+    word-wrap: break-word;
+    display: table;
+}
+
+#filetable td, #filetable th {
+    border: 1px solid #ddd;
+    padding: 8px;
+    white-space: nowrap;
+    width: 15vw;
+    /*overflow: hidden;*/
+}
+
+#filetable tr:hover {
+    color: white;
+    background-color: #ff7700;
+    cursor: default;
+}
+
+#filetable tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+#filetable tr:nth-child(even):hover {
+    background-color: #ff7700;
+}
+
+#filetable th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    width: 15vw;
+    text-align: center;
+    background-color: #4CAF50;
+    color: white;
+}
+
+#filetable thead {
+    display: block;
+}
+
+#filetable tbody {
+    overflow: auto;
+    height: 75vh;
+    display: block;
+    position: absolute;
 }
