--- a/src/styles.css
+++ b/src/styles.css
@@ -72,13 +72,15 @@ body {
     border-collapse: collapse;
     table-layout: fixed;
     word-wrap: break-word;
+    width: 100%;
 }
 
 #playlisttable td, #playlisttable th {
     border: 1px solid #ddd;
     padding: 8px;
     white-space: nowrap;
-    width: 25%;
+    width: 400px;
+    /*min-width: 25%;*/
     /*overflow: hidden;*/
 }
 
@@ -99,7 +101,7 @@ body {
 #playlisttable th {
     padding-top: 12px;
     padding-bottom: 12px;
-    width: 25%;
+    width: 400px;
     text-align: center;
     background-color: #4CAF50;
     color: white;
