--- a/src/styles.css
+++ b/src/styles.css
@@ -14,17 +14,10 @@ html, body {
     height: 100%;
 }
 
-/*!
- * Start Bootstrap - Simple Sidebar HTML Template (https://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
-/* Toggle Styles */
 .sidebar {
     position: fixed;
     top: 51px;
-    bottom: 0;
+    bottom: 80px;
     left: 0;
     z-index: 1000;
     display: block;
